Fixed HoverCard delay issue. Removed clonedElement from MonsterDialog. Docs said this is risky function. Instead just recreated img primitive in the component, and onDragStart from Drag and Drop API we are now handling the visibility state of the HoverCardContent properly. Functionlity is now as intended.

--- a/src/components/MonsterDialog/MonsterDialog.module.css
+++ b/src/components/MonsterDialog/MonsterDialog.module.css
@@ -72,6 +72,13 @@
     box-shadow: var(--shadow-elevation-high);
   }
 
+.cover {
+    object-fit: contain;
+    width: 50%;
+    border: 1px solid #000;
+    cursor: grab;
+}
+
 
   @keyframes slideUpAndFade {
     0% {
